libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__perform_schema_migration-2.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: "check_schema(\"ns2\").await"
---
[
    "Row { cols: [Col { name: Some(\"type\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"name\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"tbl_name\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"rootpage\"), decltype: Some(\"INT\") }, Col { name: Some(\"sql\"), decltype: Some(\"TEXT\") }], inner: [Text { value: \"table\" }, Text { value: \"__libsql_migration_tasks\" }, Text { value: \"__libsql_migration_tasks\" }, Integer { value: 2 }, Text { value: \"CREATE TABLE __libsql_migration_tasks (\\n            job_id INTEGER PRIMARY KEY,\\n            status INTEGER,\\n            migration TEXT NOT NULL,\\n            error TEXT\\n        )\" }] }",
    "Row { cols: [Col { name: Some(\"type\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"name\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"tbl_name\"), decltype: Some(\"TEXT\") }, Col { name: Some(\"rootpage\"), decltype: Some(\"INT\") }, Col { name: Some(\"sql\"), decltype: Some(\"TEXT\") }], inner: [Text { value: \"table\" }, Text { value: \"test\" }, Text { value: \"test\" }, Integer { value: 3 }, Text { value: \"CREATE TABLE test (c)\" }] }",
]
