libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__schema_deletion-2.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: resp.body_string().await.unwrap()
---
"{\"error\":\"Namespace `ns1` doesn't exist\"}"
