libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__schema_deletion-3.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: resp.body_string().await.unwrap()
---
"{\"error\":\"Namespace `ns2` doesn't exist\"}"
